# helios

./: .gitignore  Dockerfile  README.md  Tests.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
configs/: logging.yaml  models.yaml
src/ai_assistant/cli/: REMOVED_github_commands.py  commands.py  deprecated_interactive.py  github_commands.py  interactive.py  main.py
src/ai_assistant/cli/interactive/: actions.py  actions_impl.py  chat_handler.py  command_handler.py  display.py  orchestrator.py  session.py  stubs.py
src/ai_assistant/core/: config.py  exceptions.py  logger.py
src/ai_assistant/logic/: agent_tools.py  agent_tools_hybrid.py  agentic_logic.py  agentic_logic_hybrid.py  code_logic.py  file_logic.py  git_logic.py  github_logic.py  indexing_logic.py
src/ai_assistant/logic/agent/: agent_main.py  executor.py  interactive_agent.py  planner.py  qna_tools.py  theme.py  tools.py
src/ai_assistant/models/: request.py  response.py  test.py
src/ai_assistant/services/: ai_service.py  code_analyzer.py  file_service.py  github_service.py  vector_store.py
src/ai_assistant/utils/: file_utils.py  git_utils.py  parsing_utils.py  prompt_utils.py
tests/: test_ai_service.py  test_cli.py  test_github_service.py
